@@ -9,6 +9,7 @@ vNEXT (in development)
    * Added support for EXTERNAL mechanism, disabled by default
    * Now attempts to renegotiate if the server doesn't recognise the SASL mechanism that was tried
  * Added UserNickChanged and corresponding ChannelNickChanged events
+ * Added ServerConnectionError, raised when connecting to the server fails
  * (Internal) Minor version updates for Gradle, Kotlin and JUnit
 
 v0.6.0
